tests/type_errors/set_from_list_of_functions.nos
# expect_error: does not implement Eq
# Functions are not hashable and cannot be Set elements
main() = Set.fromList([x => x + 1, x => x + 2])
